--- a/endoDiv_explainDecay.Rmd
+++ b/endoDiv_explainDecay.Rmd
@@ -5,20 +5,16 @@ date: "12/2/2018"
 output: github_document
 ---
 
-
 ```{r, include = F}
 #chunk options
-
-knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 ```
 
 Load libraries, functions, data
 ```{r load}
-#libraries, fxns, data
 
 #---------------------------#
 #libraries
-
 library(knitr) #r markdown
 library(readr) #read/write
 library(magrittr) #data formatting
@@ -28,127 +24,58 @@ library(ggplot2) #plotting
 library(grid) #plotting
 library(gridExtra)
 #devtools::install_github("cornwell-lab-unsw/litterfitter") #fit decay models to timeseries
-#library(litterfitter) #fit decay models to timeseries
-#library(lmtest) # for coxtest()
+library(litterfitter) #fit decay models to timeseries
+library(lmtest) # for coxtest()
 library(vegan) #diversity metrics
-#library(rioja) #WA-PLS
+library(rioja) #WA-PLS
 
 #---------------------------#
 #fxns
-
-source("code/load_microbeData_fxns.R")
-source("code/load_traitData_fxns.R")
-source("code/load_decayData_fxns.R")
-source("code/check_fxns.R")
-source("code/summaryTable_fxns.R")
-source("code/analysisDF_fxns.R")
+source('code/helper_fxns.R')
+sourceDir('code')
 
 #---------------------------#
-#data -- microbes and sample meta
+#data
 
-stemSamples <- load_stemSamples() # in code/load_microbeData_fxns.R
-fung.otu <- load_matotu() 
-comm.otu <- add_oomycetes(fung.otu) #add the oomycetes
-seqSamples <- load_seqSamples(comm.otu, stemSamples) #create sequence sample meta data table
-taxAndFunguild <- load_TaxAndFunguild(comm.otu) #taxon lookup info
+# stems in the study
+stemSamples <- load_stemSamples() # this function is in load_microbeData.R
 
-#---------------------------#
-#data -- wood traits
-
-# all trait data
-#trait.data.l <- mergeTraitData()
-#head(trait.data.l)
-#rm(trait.data.l)
-
-# averaged by code
-#if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
-traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE)
-#trait.sds_byCode(stemSamples) # within code variation
-#trait.n_byCode(stemSamples) # number of code samples that were aggregated
-
-# averaged by codeStem
-traits.stem <- trait.means_byStem(stemSamples)
-#trait.sds_byStem(stemSamples) # within codeStem variation
-#trait.n_byStem(stemSamples) # number of codeStem samples that were aggregated
-
-#---------------------------#
-#data -- mass loss
-
-# load mass loss data and calculate percent mass remaining (pmr)
+# stem mass
 initial_mass <- read_in_initial_mass()
 harvest_mass <- LoadHarvestFiles()
-pmr <- Calc_massRemaining(initial_mass, harvest_mass)
+pmr <- Calc_massRemaining(initial_mass, harvest_mass) # calculate percent mass remaining (pmr)
+pmr_byStem <- AvgPMR_byStem(pmr) # average pmr for each stem and timepoint
+stem.respVars <- list("time7", "time13", "time25", "time37","time59")
 
-# average pmr for each stem and timepoint
-pmr_byStem <- AvgPMR_byStem(pmr)
-
-#---------------------------#
-# calculate decay trajectory fits for each species+size
-
-#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes
+# decay fits
+#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes; for each species+size
 #write_csv(decayfits,"derived_data/decayfits.csv")
 decayfits <- read_csv("derived_data/decayfits.csv")
 indx <- unique(stemSamples[,c("code","Binomial","size")])
 decayfits %>%
   left_join(indx) -> decayfits
+code.respVars <- list("k","t60","ne.r2", "alpha","beta","w.t60","w.r2") # weibull params: alpha = shape param, beta = scale param
 
-# weibull params
-# alpha = shape param
-# beta = scale param
+# wood traits
+#trait.data.l <- mergeTraitData() # all trait data
+traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
+#trait.sds_byCode(stemSamples) # within code variation
+#trait.n_byCode(stemSamples) # number of code samples that were aggregated
+traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
+#trait.sds_byStem(stemSamples) # within codeStem variation
+#trait.n_byStem(stemSamples) # number of codeStem samples that were aggregated
 
-#---------------------------#
-# wood trait residuals
+# wood trait residuals (see `woodTraits_explainDecay.Rmd')
+result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, traits.code, code.respVars)
+traitResiduals.code <- result.traitsDecay$traitResiduals.code
+result.traitsPMR <- doAnalysis_traits_explain_pmr(pmr_byStem, traits.code, traits.stem, stem.respVars)
+traitResiduals.stem <- result.traitsPMR$traitResiduals.stem
 
-#by code
-decayfits %>%
-  select(code, species, size, 
-         ne.r2, k, t70, 
-         w.r2, alpha, beta, w.t70) %>%
-  left_join(traits.code) %>% 
-  filter(!is.na(P)) %>%
-  filter(!is.na(waterperc)) -> decayfits.traits
-respVars <- list("k","t70","ne.r2", "alpha","beta","w.t70","w.r2")
-rhs <- "size + waterperc + density + barkthick + P + K + Ca + Mn + Fe + Zn + N + C"
-#mod.full.list<-lapply(respVars, ModelFit_manyYs, rhs, curr.data=decayfits.traits) # summaryTable_fxns.R
-#do stepwise model selection #uncomment if data changes
-# mod.select.list<-lapply(mod.full.list, function(x) {
-#   x.updated<-update(x, . ~ ., data = model.frame(x))
-#   mod.select<-step(x.updated, direction="backward")
-#   return(mod.select)
-#   })
-# names(mod.select.list) <- respVars
-# #saveRDS(mod.select.list, file = "derived_data/modSelect.RData")
-mod.select.list <- readRDS(file = "derived_data/modSelect.RData")
-#extract and save the residuals
-dataset.list<-rep(list(decayfits.traits), length(respVars))
-names(mod.select.list)<-respVars
-traitResiduals.code<-ExtractResids(mod.list=mod.select.list, 
-                                   dataset.list=dataset.list, 
-                                   sampleName = "code") # summaryTable_fxns.R
-
-#by stem
-respVars <- list("time7", "time13", "time25", "time37","time59")
-datasets<-lapply(respVars, function(x) {
-  result<-CreateTraitPMRpair(x, traits.stem, traits.code, pmr_byStem) #analysisDF_fxns.R; # stem-level waterperc, xrf, and CN and (small) species-level barkthickness and density
-  return(result)
-})
-names(datasets)<-respVars
-rhs <- "size + waterperc + density_smspp + barkthick_smspp + P + K + Ca + Mn + Fe + Zn + N + C"
-lhs <- "curr.pmr"
-mod.full.list<-lapply(datasets, function(x) {
-  result<-ModelFit_manyYs(y=lhs, rhs=rhs, curr.data=x)
-  return(result)
-})
-# #do stepwise model selection
-# mod.select.list<-lapply(mod.full.list, function(x) {
-#   x.updated<-update(x, . ~ ., data = model.frame(x)) 
-#   mod.select<-step(x.updated, direction="backward")
-#   return(mod.select)
-#   })
-# saveRDS(mod.select.list, file = "derived_data/modSelect_stem.RData")
-mod.select.list <- readRDS(file = "derived_data/modSelect_stem.RData")
-#extract and save the residuals
-traitResiduals.stem<-ExtractResids(mod.list=mod.select.list, dataset.list=datasets, sampleName = "codeStem") # summaryTable_fxns.R
+#microbes
+microb.data <- load_MicrobeCollection(stemSamples)
+taxAndFunguild <- microb.data$taxAndFunguild
+comm.otu <- microb.data$comm.otu
+seqSamples <- microb.data$seqSamples
 
 ```
 
@@ -162,59 +89,18 @@ Hyp-Alt: Greater microbial diversity will lead to worse-fitting decay models (ne
 Hyp-Alt: Greater saprotroph and basidiomycete richness will lead to worse-fitting decay models (ne.r2), slower decay (k), and more lagginess (alpha) because decayers will be allocating more of their resources to combat one another.
 ## *Hyp-c (species+size-level)* Greater pathogen and oomycete richness will lead to worse-fitting decay models (ne.r2), slower decay (k), and more lagginess (alpha) because the presence of these organisms will inhibit the establishment and activity of decayers.
 ```{r}
-
-# summarize the diversity in each sample
-rich.df<-Calc_richOTU(taxAndFunguild, comm.otu)
-H.df<-Calc_H.OTU(taxAndFunguild, comm.otu)
-sapro.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Sapro", taxAndFunguild, comm.otu=comm.otu)  # analysisDF_fxns.R
-basidio.df<-Calc_richOTUtype(colNam="phylum", grepTerm="Basid", taxAndFunguild, comm.otu=comm.otu)
-path.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Patho", taxAndFunguild, comm.otu=comm.otu)
-oomy.df<-Calc_richOTUtype(colNam="kingdom", grepTerm="Protist", taxAndFunguild, comm.otu=comm.otu) # have to do this with the full community matrix because there are so few of these guys
-richList<-list(rich.df, H.df, sapro.df, basidio.df, path.df, oomy.df)
-richNames<-c("Richness","ShannonsH","Sapro.rich","Basidio.rich","Patho.rich","Oomy.rich")
-
-#create a set of richness and decay dataframes
-rich.decayfits<-lapply(richList, function(x) {CreateRichDecayfits_df(otutype.df=x, decayfits=decayfits)})
-
-# fit models
-rhs <- "size * mean"
-# size = small/large
-# mean = mean OTU richness
-lhs <- list("k","t70","ne.r2", "alpha","beta","w.t70","w.r2")
-
-richType.list<-list()
-for(i in 1:length(rich.decayfits)){
-  resp.list<-list()
-  for(k in 1:length(lhs)){
-    resp.list[[k]]<-ModelFit_manyYs(y = lhs[[k]], rhs = rhs, curr.data = rich.decayfits[[i]]) 
-  }
-  names(resp.list)<-lhs
-  richType.list[[i]]<-resp.list
-}
-names(richType.list)<-richNames
-
-#summarize
-pretty.list<-lapply(richType.list, MakeLmSummaryTable, respvars=lhs)
-pretty.df <- list_to_df(pretty.list)
-write.csv(pretty.df, file="output/diversitysummary_code.csv")
+result.list <- doAnalysis_endoDiv_explainDecay(taxAndFunguild, comm.otu, decayfits, code.respVars)
+write.csv(result.list$pretty.df, file="output/tables/supplementary/diversitysummary_code.csv")
 
 #identify significant relationships
-pretty.df %>%
+result.list$pretty.df %>%
   filter(term %in% c('mean','sizesmall','sizesmall:mean')) %>%
   gather(key = "respvar", value = "coef", -c(source, term)) %>%
   mutate(signif = ifelse(grepl("*", coef, fixed = T), T, F)) %>%
   filter(signif == T)
-
-#save the richness dataframes for use with trait residuals
-richList.code <- richList
-names(richList.code)<-richNames
-
-rm(rich.df, H.df, sapro.df, basidio.df, path.df, oomy.df, 
-   richList, richNames, rhs, lhs, richType.list, pretty.list, summ, summ.df,
-   rich.decayfits, resp.list, i, k)
 ```
 
-The only term that is significant in these models is size class. Small stems had significantly fewer pathotroph taxa and oomycete taxa.
+The only term that is significant in these models is size class. Small stems had significantly fewer oomycete taxa.
 
 ## *Hyp-a (stem-level)* Greater microbial diversity (richness, Shannon diversity, ... add phylogenetic diversity) will lead to less mass remaining esp. at early time steps because of the selection effect for fast decayers and complementarity among taxa for decay. 
 Hyp-Alt: Greater microbial diversity will lead to more mass remaining because taxa will be allocating more of their resources to combat one another.
@@ -222,113 +108,37 @@ Hyp-Alt: Greater microbial diversity will lead to more mass remaining because ta
 Hyp-Alt: Greater saprotroph and basidiomycete richness will lead to more mass remaining because decayers will be allocating more of their resources to combat one another.
 ## *Hyp-c (stem-level)* Greater pathogen and oomycete richness will lead to more mass remaining because the presence of these organisms will inhibit the establishment and activity of decayers.
 ```{r}
+result.list.stem <- doAnalysis_endoDiv_explainPMR(taxAndFunguild, comm.otu, pmr_byStem, stem.respVars)
+write.csv(result.list.stem$pretty.df, file="output/tables/supplementary/diversitysummary_stem.csv")
 
-# summarize the diversity in each sample
-rich.df<-Calc_richOTU(taxAndFunguild, comm.otu) #codeStems that need to be excluded because it just used the seq_sampName information.... will get fixed in the next step
-H.df<-Calc_H.OTU(taxAndFunguild, comm.otu)
-sapro.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Sapro", taxAndFunguild, comm.otu=comm.otu)  
-basidio.df<-Calc_richOTUtype(colNam="phylum", grepTerm="Basid", taxAndFunguild, comm.otu=comm.otu)
-path.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Patho", taxAndFunguild, comm.otu=comm.otu)  
-oomy.df<-Calc_richOTUtype(colNam="kingdom", grepTerm="Protist", taxAndFunguild, comm.otu=comm.otu)
-richList<-list(rich.df, H.df, sapro.df, basidio.df, path.df, oomy.df)
-richNames<-c("Richness","ShannonsH","Sapro.rich","Basidio.rich","Patho.rich","Oomy.rich")
-names(richList)<-richNames
-
-#create a set of richness and decay dataframes
-rich.decayfits<-lapply(richList, function(x) {
-  
-  left_join(pmr_byStem, x) %>% 
-    filter(!is.na(seq_sampName)) -> result
-  
-  return(result)
-  
-  })
-
-# fit models
-rhs <- "size * sub_rich"
-lhs <- list("time7", "time13", "time25", "time37","time59")
-
-richType.list<-list()
-for(i in 1:length(rich.decayfits)){
-  resp.list<-list()
-  for(k in 1:length(lhs)){
-    resp.list[[k]]<-ModelFit_manyYs(y = lhs[[k]], rhs = rhs, curr.data = rich.decayfits[[i]]) 
-  }
-  names(resp.list)<-lhs
-  richType.list[[i]]<-resp.list
-}
-names(richType.list)<-richNames
-
-#summarize
-pretty.list<-lapply(richType.list, MakeLmSummaryTable, respvars=lhs)
-pretty.df <- list_to_df(pretty.list)
-write.csv(pretty.df, file="output/diversitysummary_stem.csv")
-
-#identify significant relationships
-pretty.df %>%
-  filter(term %in% c('sizesmall','sizesmall:sub_rich','sub_rich')) %>%
-  gather(key = "respvar", value = "coef", -c(source, term)) %>%
-  mutate(signif = ifelse(grepl("*", coef, fixed = T), T, F)) %>%
-  filter(signif == T)
-
-#save the richness dataframes for use with trait residuals
-richList.stem <- richList
-names(richList.stem)<-richNames
+ #identify significant relationships
+ result.list.stem$pretty.df %>%
+   filter(term %in% c('sizesmall','sizesmall:sub_rich','sub_rich')) %>%
+   gather(key = "respvar", value = "coef", -c(source, term)) %>%
+   mutate(signif = ifelse(grepl("*", coef, fixed = T), T, F)) %>%
+   filter(signif == T)
 
 ```
 
-Saprotroph OTU richness is associated with percent mass remaining at time25 and time37. Pathogen OTU richness and Shannon's H are associated with pmr at time 37. In all cases, there is a negative interaction between stem size and diversity.
+OTU richness and Shannon's H are associated with percent mass remaining at time25 and time37. Pathogen OTU richness is associated with pmr at time 37. In all cases, there is a negative interaction between stem size and diversity.
 
-Plot the relationship between saprotroph OTU richness and pmr at time25 and time37
+Plot the relationship between OTU richness and Shannon's H and pmr at time25 and time37
 ```{r}
-names(rich.decayfits) <- richNames
-tmp <- rich.decayfits[['Sapro.rich']]
-tmp %>%
-  select(codeStem, time25, time37, sub_rich, size) %>%
-  gather(key = "time", value = "pmr", -c(codeStem, sub_rich, size)) -> tmp1
-ggplot(tmp1, aes(x = sub_rich, y = pmr)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  facet_grid(time~size)+
-  xlab("Saprotroph OTU richness") + ylab("Mass remaining after X months (%)") +
-  theme_bw()
-ggsave(filename = "output/richness_sapro_pmr.pdf", width = 5, height = 5)
-```
+makefig__RichShannonPMR.stem(taxAndFunguild, comm.otu, pmr_byStem, stem.respVars) # output/figures/supplementary/richness_pmr.pdf
 
-More saprotrophs leads to less mass remaining - but only in small stems.
+```
+[](output/figures/supplementary/richness_sapro_pmr.pdf)
+
+Not especially convincing relationships. On the whole, diversity is positively correlated with mass remaining in large stems but negatively correlated in small stems.
 
 Plot the relationship between pathogen OTU richness and pmr at time37
 ```{r}
-tmp <- rich.decayfits[['Patho.rich']]
-ggplot(tmp, aes(x = sub_rich, y = time37)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  facet_grid(~size)+
-  xlab("Pathotroph OTU richness") + ylab("Mass remaining after 37 months (%)") +
-  theme_bw()
-ggsave(filename = "output/richness_patho_pmr.pdf", width = 5, height = 3.5)
+makefig__pathoRichPMR.stem(taxAndFunguild, comm.otu, pmr_byStem, stem.respVars) # output/figures/supplementary/richness_patho_pmr.pdf
+
 ```
+[](output/figures/supplementary/richness_patho_pmr.pdf)
 
-More pathotrophs leads to less mass remaining - but only in small stems.
-
-
-Plot the relationship between Shannon's H and pmr at time37
-```{r}
-tmp <- rich.decayfits[['ShannonsH']]
-ggplot(tmp, aes(x = sub_rich, y = time37)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  facet_grid(~size)+
-  xlab("Shannon's H") + ylab("Mass remaining after 37 months (%)")+
-  theme_bw()
-ggsave(filename = "output/richness_shannonsh_pmr.pdf", width = 5, height = 3.5)
-
-rm(rich.df, H.df, sapro.df, basidio.df, path.df, oomy.df, 
-   richList, richNames, rhs, lhs, richType.list, pretty.list, summ, summ.df,
-   rich.decayfits, resp.list, i, k)
-```
-
-Higher Shannon's H leads to less mass remaining in small stems, more mass remaining in large stems... but these are pretty weak relationships.
+Pathotroph richness is positively correlated with mass remaining in large stems, but negatively correlated in small stems.
 
 
 ##############################################
@@ -337,184 +147,63 @@ Higher Shannon's H leads to less mass remaining in small stems, more mass remain
 
 ## *Hyp (species+size-level)* After accounting for variation in decay due to wood traits, average initial microbial diversity (richness, Shannon diversity, ... add phylogenetic diversity) will predict variation in decay model fit (r2), rate (k), and lagginess (alpha).
 ```{r}
-
-#merge the diversity and trait residuals data
-rich.traitresid.list<-lapply(richList.code, function(x) {CreateRichTraitResid_df(otutype.df = x, trait.residuals = traitResiduals.code)})
-
-#fit models
-rhs <- "size * mean"
-lhs <- list("k","t70","ne.r2", "alpha","beta","w.t70","w.r2")
-
-richType.list<-list()
-for(i in 1:length(rich.traitresid.list)){
-  resp.list<-list()
-  for(k in 1:length(lhs)){
-    df.sub<-subset(rich.traitresid.list[[i]], resp == lhs[[k]]) #subset the dataset based on the current resp var
-    resp.list[[k]]<-ModelFit_manyYs(y = "resid", rhs = rhs, curr.data = df.sub) #run models
-  }
-  names(resp.list)<-lhs
-  richType.list[[i]]<-resp.list
-}
-names(richType.list)<-names(richList.code)
-
-#summarize
-pretty.list<-lapply(richType.list, MakeLmSummaryTable, respvars=lhs)
-pretty.df <- list_to_df(pretty.list)
-write.csv(pretty.df, file="output/diversitysummary_code_traitresid.csv")
+result.list <- doAnalysis_endoDiv_explainDecayResids(taxAndFunguild, comm.otu, traitResiduals.code, code.respVars)
+write.csv(result.list$pretty.df, file="output/tables/supplementary/diversitysummary_code_traitresid.csv")
 
 #identify significant relationships
-pretty.df %>%
+result.list$pretty.df %>%
   filter(term %in% c('mean','sizesmall','sizesmall:mean')) %>%
   gather(key = "respvar", value = "coef", -c(source, term)) %>%
   mutate(signif = ifelse(grepl("*", coef, fixed = T), T, F)) %>%
   filter(signif == T)
-
-rm(richList.code, rhs, lhs, richType.list, resp.list, pretty.list, summ, summ.df, i, k)
+result.list$pretty.df  
 
 ```
 
-Beyond wood trait data, saprotroph richness improves models for k and t70. In addition, pathotroph richness improves the model for ne.r2.
+Beyond wood trait data, saprotroph richness improves models for beta and t60. 
 
-Plot the relationship between Saprotroph richness and k
+Plot the relationship between Saprotroph richness and beta, t60
 ```{r}
-tmp <- rich.traitresid.list[['Sapro.rich']]
-tmp %>%
-  filter(resp == "k") -> tmp
-ggplot(tmp, aes(x = mean, y = resid, color = size)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  xlab("Saprotroph richness") + ylab("Residuals - Decay rate (k)") +
-  theme_bw()
-
-#ggsave(filename = "output/richness_sapro_kResids.pdf", width = 5, height = 3.5)
-```
-
-Higher saprotroph richness leads to faster decay than would be expected based on wood traits alone.
-
-Plot the relationship between Saprotroph richness and t70
-```{r}
-tmp <- rich.traitresid.list[['Sapro.rich']]
-tmp %>%
-  filter(resp == "t70") -> tmp
-ggplot(tmp, aes(x = mean, y = resid, color = size)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  xlab("Saprotroph richness") + ylab("Residuals - Time to 70% mr (t70)") +
-  theme_bw()
-#ggsave(filename = "output/richness_sapro_t70Resids.pdf", width = 5, height = 3.5)
+makefig__saproRichDecayResids(taxAndFunguild, comm.otu, traitResiduals.code, code.respVars) # output/figures/supplementary/richness_sapro_decayResids.pdf
 
 ```
+[](output/figures/supplementary/richness_sapro_decayResids.pdf)
 
-Higher saprotroph richness leads to shorter times to 70% mass remaining than would be expected based on wood traits alone.
-
-Plot the relationship between Saprotroph richness and beta
-```{r}
-tmp <- rich.traitresid.list[['Sapro.rich']]
-tmp %>%
-  filter(resp == "beta") -> tmp
-ggplot(tmp, aes(x = mean, y = resid, color = size)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  xlab("Saprotroph richness") + ylab("Residuals - Beta") +
-  theme_bw()
-#ggsave(filename = "output/richness_sapro_betaResids.pdf", width = 5, height = 3.5)
-
-```
-
-Higher saprotroph richness leads to shorter times to 70% mass remaining than would be expected based on wood traits alone.
-
-Plot the relationship between Pathotroph richness and ne.r2
-```{r}
-tmp <- rich.traitresid.list[['Patho.rich']]
-tmp %>%
-  filter(resp == "ne.r2") -> tmp
-ggplot(tmp, aes(x = mean, y = resid, color = size)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  xlab("Pathotroph richness") + ylab("Residuals - Neg. exp. R2")
-
-rm(rich.df, H.df, sapro.df, basidio.df, path.df, oomy.df, 
-   richList, richNames, rhs, lhs, richType.list, pretty.list, summ, summ.df,
-   rich.decayfits, resp.list, i, k,
-   rich.traitresid.list)
-```
-
-Higher pathotroph richness leads to better-fitting decay models than would be expected based on wood traits alone.
+Higher saprotroph richness leads to smaller beta and t70 values (i.e. faster mass loss) than would be expected based on wood traits alone, especially in large stems.
 
 
 ## *Hyp (stem-level)* After accounting for variation in decay due to wood traits, initial microbial diversity (richness, Shannon diversity, ... add phylogenetic diversity) will predict variation in percent mass loss, esp. at early time points.
 ```{r}
-
-#merge the diversity and trait residuals data
-rich.traitresid.list<-lapply(richList.stem, function(x) {traitResiduals.stem %>% left_join(x)})
-
-#fit models
-rhs <- "size * sub_rich"
-lhs <- list("time7", "time13", "time25", "time37", "time59")
-
-richType.list<-list()
-for(i in 1:length(rich.traitresid.list)){
-  resp.list<-list()
-  for(k in 1:length(lhs)){
-    df.sub<-subset(rich.traitresid.list[[i]], resp == lhs[[k]]) #subset the dataset based on the current resp var
-    resp.list[[k]]<-ModelFit_manyYs(y = "resid", rhs = rhs, curr.data = df.sub) #run models
-  }
-  names(resp.list)<-lhs
-  richType.list[[i]]<-resp.list
-}
-names(richType.list)<-names(richList.stem)
-
-#summarize
-pretty.list<-lapply(richType.list, MakeLmSummaryTable, respvars=lhs)
-pretty.df <- list_to_df(pretty.list)
-write.csv(pretty.df, file="output/diversitysummary_stem_traitresid.csv")
+result.list.stem <- doAnalysis_endoDiv_explainPMRResids(taxAndFunguild, comm.otu, traitResiduals.stem, stem.respVars)
+write.csv(result.list.stem$pretty.df, file="output/tables/supplementary/diversitysummary_stem_traitresid.csv")
 
 #identify significant relationships
-pretty.df %>%
+result.list.stem$pretty.df %>%
   filter(term %in% c('sub_rich','sizesmall','sizesmall:sub_rich')) %>%
   gather(key = "respvar", value = "coef", -c(source, term)) %>%
   mutate(signif = ifelse(grepl("*", coef, fixed = T), T, F)) %>%
   filter(signif == T)
+
 ```
 
-Overall OTU richness improves model estimates for percent mass remaining at 25 months. Pathotroph richness improves model estmates for pmr at 37 months.
+Beyond wood trait data, overall and basidio OTU richness improve model estimates for percent mass remaining at 25 months. Pathotroph richness improves model estmates for pmr at 37 months.
 
-Plot the relationship between OTU richness and residuals of pmr at time25
+Plot the relationship between OTU richness, basidio richness and residuals of pmr at time25
 ```{r}
-tmp <- rich.traitresid.list[['Richness']]
-tmp %>%
-  select(codeStem, resp, sub_rich, size, resid) %>%
-  filter(resp == "time25") -> tmp1
-
-ggplot(tmp1, aes(x = sub_rich, y = resid)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  facet_grid(~size)+
-  xlab("OTU richness") + ylab("Residuals -  pmr time25")
+makefig__richPMRResids(taxAndFunguild, comm.otu, traitResiduals.stem, stem.respVars) # output/figures/supplementary/richness_PMRResids.pdf
 
 ```
+[](output/figures/supplementary/richness_PMRResids.pdf)
 
-In small stems, more fungal OTUs leads to less mass remaining after 25 months than would be expected based on wood traits alone. This relationship looks heavily influenced by 1 outlier w/ high OTU richness
+In small stems, more OTU richness is associated with less mass remaining after 25 months than would be expected based on wood traits alone. This relationship looks heavily influenced by 1 outlier w/ high OTU (and basidio) richness
 
 
 Plot the relationship between Pathotroph OTU richness and residuals of pmr at time37
 ```{r}
-tmp <- rich.traitresid.list[['Patho.rich']]
-tmp %>%
-  select(codeStem, resp, sub_rich, size, resid) %>%
-  filter(resp == "time37") -> tmp1
-
-ggplot(tmp1, aes(x = sub_rich, y = resid)) +
-  geom_point() +
-  geom_smooth(method = "lm") +
-  facet_grid(~size)+
-  xlab("Pathotroph OTU richness") + ylab("Residuals - pmr time37") +
-  theme_bw()
-#ggsave(filename = "output/richness_patho_time37Resids.pdf", width = 5, height = 3.5)
-
-
-rm(richList.stem, rich.traitresid.list, rhs, lhs, richType.list, resp.list, pretty.list, df.sub, i, k)
+makefig__path_richPMRResids(taxAndFunguild, comm.otu, traitResiduals.stem, stem.respVars) # output/figures/supplementary/richness_patho_time37Resids.pdf
+  
 ```
+[](output/figures/supplementary/richness_patho_time37Resids.pdf)
 
-In small stems, more pathotrophs leads to less mass remaining after 37 months than would be expected based on wood traits alone.
+In small stems, more pathotroph OTUs is associated with less mass remaining after 37 months than would be expected based on wood traits alone.
 
