--- a/woodTraits_explainDecay.Rmd
+++ b/woodTraits_explainDecay.Rmd
@@ -7,17 +7,14 @@ output: github_document
 
 ```{r, include = F}
 #chunk options
-
-knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE)
+knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 ```
 
 Load libraries, functions, data
 ```{r load}
-#libraries, fxns, data
 
 #---------------------------#
 #libraries
-
 library(knitr) #r markdown
 library(readr) #read/write
 library(magrittr) #data formatting
@@ -31,65 +28,67 @@ library(litterfitter) #fit decay models to timeseries
 library(lmtest) # for coxtest()
 #library(vegan) #diversity metrics
 #library(rioja) #WA-PLS
+library(GGally)
 
 #---------------------------#
 #fxns
-
-source("code/load_microbeData_fxns.R")
-source("code/load_traitData_fxns.R")
-source("code/load_decayData_fxns.R")
-source("code/check_fxns.R")
-source("code/summaryTable_fxns.R")
-source("code/analysisDF_fxns.R")
+source('code/helper_fxns.R')
+sourceDir('code')
 
 #---------------------------#
-#data -- sample meta
+#data
 
-stemSamples <- load_stemSamples() # in code/load_microbeData_fxns.R
+# stems in the study
+stemSamples <- load_stemSamples() # this function is in load_microbeData.R
 
-#---------------------------#
-#data -- wood traits
-
-# all trait data
-#trait.data.l <- mergeTraitData()
-#head(trait.data.l)
-#rm(trait.data.l)
-
-# averaged by code
-#if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
-traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE)
-#trait.sds_byCode(stemSamples) # within code variation
-#trait.n_byCode(stemSamples) # number of code samples that were aggregated
-
-# averaged by codeStem
-traits.stem <- trait.means_byStem(stemSamples)
-#trait.sds_byStem(stemSamples) # within codeStem variation
-#trait.n_byStem(stemSamples) # number of codeStem samples that were aggregated
-
-#---------------------------#
-#data -- mass loss
-
-# load mass loss data and calculate percent mass remaining (pmr)
+# stem mass
 initial_mass <- read_in_initial_mass()
 harvest_mass <- LoadHarvestFiles()
-pmr <- Calc_massRemaining(initial_mass, harvest_mass)
+pmr <- Calc_massRemaining(initial_mass, harvest_mass) # calculate percent mass remaining (pmr)
+pmr_byStem <- AvgPMR_byStem(pmr) # average pmr for each stem and timepoint
+stem.respVars <- list("time7", "time13", "time25", "time37","time59")
 
-# average pmr for each stem and timepoint
-pmr_byStem <- AvgPMR_byStem(pmr)
-
-#---------------------------#
-# calculate decay trajectory fits for each species+size
-
-#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes
+# decay fits
+#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes; for each species+size
 #write_csv(decayfits,"derived_data/decayfits.csv")
 decayfits <- read_csv("derived_data/decayfits.csv")
 indx <- unique(stemSamples[,c("code","Binomial","size")])
 decayfits %>%
   left_join(indx) -> decayfits
+code.respVars <- list("k","t60","ne.r2", "alpha","beta","w.t60","w.r2") # weibull params: alpha = shape param, beta = scale param
 
-# weibull params
-# alpha = shape param
-# beta = scale param
+# wood traits
+#trait.data.l <- mergeTraitData() # all trait data
+traits.code <- trait.means_byCode_new(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
+#trait.sds_byCode(stemSamples) # within code variation
+#trait.n_byCode(stemSamples) # number of code samples that were aggregated
+traits.stem <- trait.means_byStem_new(stemSamples) # averaged by codeStem
+#trait.sds_byStem(stemSamples) # within codeStem variation
+#trait.n_byStem(stemSamples) # number of codeStem samples that were aggregated
+
+```
+
+Check out correlations among traits and produce bivariate plots. Exclude C fraction data...
+```{r}
+cfract.traits <- c("Arabinose","Galactose","Glucose","Mannose","perc.Total.lignin","Rhamnose","Xylose")
+traits.code %>%
+  select(-cfract.traits) %>%
+  filter(!is.na(C)) -> traits.code.noc
+matonly <- traits.code.noc[,!colnames(traits.code.noc) %in% c("code", "species", "size")]
+matonly.s <- scale(as.matrix(matonly[,-1]))
+corrplot(cor(matonly.s), type = "lower", diag = F)
+ggpairs(data = matonly)
+
+```
+
+Include C fraction data and exclude samples w/o this information
+```{r}
+traits.code %>%
+  filter(!is.na(Arabinose)) -> traits.code.c
+matonly <- traits.code.c[,!colnames(traits.code.c) %in% c("code", "species", "size")]
+matonly.s <- scale(as.matrix(matonly[,-1]))
+corrplot(cor(matonly.s), type = "lower", diag = F)
+ggpairs(data = matonly)
 
 ```
 
@@ -97,11 +96,12 @@ We expect initial wood traits will explain varitation in species+size decay rate
 
 ## *Hyp (species+size-level)* Species+size-level initial wood traits will predict variation decay rates and lagginess.
 ```{r}
+makefig__traits_explain_decayParams(decayfits, traits.code) # output/figures/maintext/traits_explain_decayparams.pdf
 
-makefig__traits_explain_decayParams # output/figures/maintext/traits_explain_decayparams.pdf
-  
-
+#save the resulting object that contains residual values
+#result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, traits.code) # this fxn is called in the makefig fxn above
 ```
+![](output/figures/maintext/traits_explain_decayparams.pdf)
 
 Variation in w.t70 and beta (shape param) were best explained by traits (high r2); whereas traits explained much less variation in alpha (scale) and w.r2.
 
@@ -111,17 +111,6 @@ Variation in w.t70 and beta (shape param) were best explained by traits (high r2
 - w.t70: Samples with long wait times to 70% mass remaining have low N and belong to the large size class. Other attributes include: thick bark, high C, and low water content.
 
 
-```{r}
-#extract and save the residuals
-dataset.list<-rep(list(decayfits.traits), length(respVars))
-names(mod.select.list)<-respVars
-traitResiduals.code<-ExtractResids(mod.list=mod.select.list, dataset.list=dataset.list, sampleName = "code") # summaryTable_fxns.R
-
-rm(mod.full.list, mod.select.list, 
-   prettyTab, decayfits.traits)
-
-```
-
 ## *Hyp (stem-level)* Stem-level initial wood traits will predict variation in percent mass loss at each time step.
 
 First, we need to decide what trait data (and samples) to include in this analysis since we don't have full coverage of stem-level trait data. Density and bark thickness were only measured on small sized stems.  If there is not be very much within-species variation in these traits that contribute to variation in percent mass loss than we can justify including species-level estimates of these traits in the stem-level model. 
@@ -130,46 +119,16 @@ Plot the small-sized stem-level measures of density and barkthick
 ```{r}
 makefig__variation_densityNbarkthick(traits.stem, traits.code, pmr_byStem) # output/figures/supplementary/variation_densityNbarkthick.pdf
 
-rm(db.stem, db.code, p.denVar, p.barVar)
-
 ```
+![](output/figures/supplementary/variation_densityNbarkthick.pdf)
 
 A few species have a relatively large amount of within-species variation in density (i.e. alli) and barkthickness (i.e. leer and cota).
 
 Compare model fits (r2) using stem and species-level data to identify how much information about percent mass remaining is lost by using species-level estimates.
 ```{r}
-
-#set up models
-respVars <- list("time7", "time13", "time25", "time37","time59")
-mod.stem_density.list <- lapply(respVars, ModelFit_manyYs, rhs="density_stem", curr.data=db.df) # summaryTable_fxns.R
-mod.code_density.list <- lapply(respVars, ModelFit_manyYs, rhs="density_code", curr.data=db.df) # summaryTable_fxns.R
-mod.stem_barkthick.list <- lapply(respVars, ModelFit_manyYs, rhs="barkthick_stem", curr.data=db.df) # summaryTable_fxns.R
-mod.code_barkthick.list <- lapply(respVars, ModelFit_manyYs, rhs="barkthick_code", curr.data=db.df) # summaryTable_fxns.R
-
-#cox test to compare non-nested models
-# if the first model (M1) contains the correct set of regressors, then a fit of the regressors from the second model (M2) to the fitted values from M1 should have no further explanatory value. But if it has, it can be concluded that M1 does not contain the correct set of regressors
-cox.density <- Do_coxTests(mod.stem_density.list, 
-               mod.code_density.list, 
-               respvars=unlist(respVars))
-# stem level density information improves estimates for time7 and time59
-cox.barkthick <- Do_coxTests(mod.stem_barkthick.list, 
-                             mod.code_barkthick.list, 
-                             respvars=unlist(respVars))
-
-#annotation <- c("M1 = stem, M2 = code")
-extr_cox_results <-function(x){
-  df <- data.frame(mod = row.names(x), pval = x$`Pr(>|z|)`)
-  return(df)
-}
-
-cox.density.df <- list_to_df(lapply(cox.density, extr_cox_results))
-cox.density.df$meas <- "density"
-cox.barkthick.df <- list_to_df(lapply(cox.barkthick, extr_cox_results))
-cox.barkthick.df$meas <- "barkthick"
-cox.df <- rbind(cox.density.df, cox.barkthick.df)
-write.csv(cox.df, file="output/smallsize_codeVstem_cox.csv")
-
-rm(db.df, mod.stem_density.list, mod.code_density.list, mod.stem_barkthick.list, mod.code_barkthick.list)
+cox.df <- doAnalysis_variation_densityNbarkthick(traits.stem, traits.code, pmr_byStem) 
+cox.df
+write.csv(cox.df, file="output/tables/supplementary/smallsize_codeVstem_cox.csv")
 
 ```
 
@@ -179,55 +138,41 @@ rm(db.df, mod.stem_density.list, mod.code_density.list, mod.stem_barkthick.list,
 Compile a "stem-level" dataframe with (a) stem-level percent mass remaining values, (b) stem-level traits including waterperc and chemistry along, and (c) small species-level density and bark thickness data. Use model selection to determine which traits to include.
 ```{r, results=FALSE}
 
-# create dataframes
-# stem-level waterperc, xrf, and CN and (small) species-level barkthickness and density
-datasets<-lapply(respVars, function(x) {
-  result<-CreateTraitPMRpair(x, traits.stem, traits.code, pmr_byStem) #analysisDF_fxns.R
-  return(result)
-})
-names(datasets)<-respVars
+makefig__traits_explain_pmr(traits.stem, traits.code, pmr_byStem) # output/figures/maintext/traits_explain_pmr.pdf
 
-#set up full models
-rhs <- "size + waterperc + density_smspp + barkthick_smspp + P + K + Ca + Mn + Fe + Zn + N + C"
-lhs <- "curr.pmr"
-mod.full.list<-lapply(datasets, function(x) {
-  result<-ModelFit_manyYs(y=lhs, rhs=rhs, curr.data=x)
-  return(result)
-})
-
-# #do stepwise model selection
-# mod.select.list<-lapply(mod.full.list, function(x) {
-#   x.updated<-update(x, . ~ ., data = model.frame(x)) 
-#   mod.select<-step(x.updated, direction="backward")
-#   return(mod.select)
-#   })
-# saveRDS(mod.select.list, file = "derived_data/modSelect_stem.RData")
-mod.select.list <- readRDS(file = "derived_data/modSelect_stem.RData")
-
-#summarize the best models
-prettyTab <- MakeLmSummaryTable(respvars=unlist(respVars), mod.list=mod.select.list) # summaryTable_fxns.R
-write.csv(prettyTab, "output/traitsummary_stem.csv")
-
-#plot
-sum.list<-lapply(mod.select.list, summary)
-coefs.df<-PullLmCoefs(sum.list, unlist(respVars))
-fitstat.df<-PullLmFitStats(sum.list, unlist(respVars))
-fitstat.df %>%
-  gather(key = "respvar", value = "value", -c(term)) %>%
-  filter(term == "r.squared") %>%
-  select(-term) %>%
-  rename('r.squared'=value) -> r2.df
-coefs.df %>%
-  left_join(r2.df) -> coefs.df
-
-coefs.df$respvar<- factor(coefs.df$respvar, levels = c("time7","time13","time25","time37","time59"))
-
-ggplot(coefs.df, aes(x = respvar, y = term, fill = r.squared)) +
-  geom_tile() + geom_text(aes(label = round(est, digits = 4))) +
-  xlab("Response variable") + ylab("Wood trait") +
-  theme_classic()
+#save the resulting object that contains residual values
+#result.traitsPMR <- doAnalysis_traits_explain_pmr(pmr_byStem, traits.code, traits.stem) # this fxn is called in the makefig fxn above
 
 ```
+![](output/figures/maintext/traits_explain_pmr.pdf)
+
+Visualize stem samples in trait space
+```{r}
+pca <- prcomp(matonly.s)
+df <- data.frame(pca$x[,1:2], 
+                 traits.code.c[,c("species","code","size")])
+datapc <- data.frame(varnames=rownames(pca$rotation), pca$rotation[,1:2])
+mult <- min(
+  (max(df[,"PC1"]) - min(df[,"PC2"])/(max(datapc[,"PC2"])-min(datapc[,"PC2"]))),
+  (max(df[,"PC2"]) - min(df[,"PC1"])/(max(datapc[,"PC1"])-min(datapc[,"PC1"])))
+)
+datapc <- transform(datapc,
+                    v1 = .7 * mult * datapc$PC1,
+                    v2 = .7 * mult * datapc$PC2)
+  
+plot_12 <- ggplot(data=datapc, aes(x=v1, y=v2, label=varnames)) + 
+  geom_text(size=3, vjust=1, color=1) + 
+  geom_segment(data=datapc, aes(x=0, y=0, xend=v1, yend=v2),
+               arrow=arrow(length=unit(0.2,"cm")), alpha=0.75, color=1) + 
+  coord_fixed() +
+  geom_point(mapping=aes(x=PC1, y=PC2, 
+                        color = species), data=df, inherit.aes = FALSE) +
+  theme_bw() + xlab("PC1") + ylab("PC2")
+plot_12
+
+summary(pca)
+```
+
 
 The explanatory power of wood traits were lowest for the first decay time point (7 months). Samples had more mass remaining...
 
@@ -235,14 +180,6 @@ The explanatory power of wood traits were lowest for the first decay time point 
 - Early-to-mid time points: Low N and belonged to the small size class
 - Mid time points: High P and low Zn
 - Late time point: High C and thin bark
-
-```{r}
-#extract and save the residuals
-traitResiduals.stem<-ExtractResids(mod.list=mod.select.list, dataset.list=datasets, sampleName = "codeStem") # summaryTable_fxns.R
-
-rm(dataset.list, datasets, lhs, rhs, mod.full.list, mod.select.list, respVars, prettyTab)
-
-```
 
 
 
